--- a/MidwayCinemas/css/styles.css
+++ b/MidwayCinemas/css/styles.css
@@ -127,6 +127,33 @@ body {
 }
 
 /* Generic Tags */
+/* Table Controls */
+table {
+    width: 96.5%;
+    height: auto;
+    position: relative;
+    left: 1.5%;
+    
+    border-collapse: separate;
+}
+
+th, td {
+    border: 1px solid #000000;
+    padding: .2em .7em;
+    text-align: right;
+}
+
+th:first-child, td:first-child {
+    text-align: left;
+}
+
+th:nth-child(2), td:nth-child(2) {
+    text-align: left;
+}
+
+tbody tr:nth-child(even) {
+    background-color: #151515;
+}
 
 /* Media Queries */
 @media only screen and (max-width: 970px) {
