--- a/MidwayCinemas/css/styles.css
+++ b/MidwayCinemas/css/styles.css
@@ -266,6 +266,24 @@ tbody tr:nth-child(even) {
 
 
 /* Media Queries */
+@media only screen and (min-width: 1300px) {
+    
+    /* General Pages */
+    /* Narrows the nav menu's bar down to prevent disproportions at higher viewport sizes. */
+    .contentBackingHeader {
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+    
+    .logo {
+        position: relative;
+        left: 42.2%;
+        
+        width: 15%;
+        height: auto;
+    }
+}
+
 @media only screen and (max-width: 970px) {
     /* General Pages */
     /* Display mobile menu. */
