--- a/MidwayCinemas/css/styles.css
+++ b/MidwayCinemas/css/styles.css
@@ -3,15 +3,7 @@ Basic Web Applications
 Name: Dakota Elam
 School: Southern Illinois University
 Date Developed: 11/8/2019
-Tested/Update: N/A
-*/
-
-/* Fonts */
-/*
-@font-face {
-    font-family: 'AirAmerica';
-    src: url('../fonts/AirAmerica-Regular.otf');
-}
+Tested/Update: 12/8/2019
 */
 
 /* General IDs and Classes */
@@ -37,7 +29,7 @@ Tested/Update: N/A
 }
 
 /* Controls the link that has the class of current to let the user know what page 
-    they are on. */
+   they are on. */
 #nav_menu ul li a.current {
     text-decoration: none;
     color: #FFFFFF;
@@ -48,6 +40,8 @@ Tested/Update: N/A
     display: none;
 }
 
+/* Positions the logo to the center of the viewport horizontally and adds a border
+   and background color. */
 .logo {
     position: relative;
     left: 37.5%;
@@ -65,6 +59,8 @@ Tested/Update: N/A
     text-align: center;
 }
 
+/* Places the navbar and title of the page on a flat colored plane to seperate it from the 
+   tileable background.*/
 .contentBackingHeader {
     background-color: #353535;
     
@@ -73,6 +69,8 @@ Tested/Update: N/A
 
 .contentWrapHeader {}
 
+/* Places the content of the page on a flat colored plane to seperate it from the tileable 
+   background. */
 .contentBacking {
     background-color: #353535;
     
@@ -88,6 +86,7 @@ Tested/Update: N/A
     border: 5px solid #A5A5A5;
 }
 
+/* keeps the text from hugging the edge of the contentBacking to improve reading. */
 .contentWrap {
     margin-left: .5%
 }
@@ -105,14 +104,6 @@ Tested/Update: N/A
     border-top: 5px solid #A5A5A5; 
     
     text-align: center;
-}
-
-.footer a:link {
-    color: #FFFFFF;
-}
-
-.footer a:visited {
-    color: #FFFFFF;
 }
 
 /* General Page CSS */
@@ -236,6 +227,16 @@ textarea {
 }
 
 /* Generic Tags */
+
+/* Links will remain white with the other text and will have an underline to show it is a link. */
+a:link {
+    color: #FFFFFF;
+}
+
+a:visited {
+    color: #FFFFFF;
+}
+
 /* Table Controls */
 table {
     width: 96.5%;
@@ -246,26 +247,21 @@ table {
     border-collapse: separate;
 }
 
+/* Adds a border to the table cells. */
 th, td {
     border: 1px solid #000000;
     padding: .2em .7em;
-    text-align: right;
 }
 
-th:first-child, td:first-child {
-    text-align: left;
-}
-
-th:nth-child(2), td:nth-child(2) {
-    text-align: left;
-}
-
+/* Changes every even numbered row to a darker shade to aid reading. */
 tbody tr:nth-child(even) {
     background-color: #151515;
 }
 
 
 /* Media Queries */
+
+/* Higher resolution viewports starting at 1300 pixels. */
 @media only screen and (min-width: 1300px) {
     
     /* General Pages */
@@ -275,6 +271,7 @@ tbody tr:nth-child(even) {
         margin-right: 10%;
     }
     
+    /* Position the logo roughly in the center of the screen horizontally. */
     .logo {
         position: relative;
         left: 42.2%;
@@ -284,6 +281,7 @@ tbody tr:nth-child(even) {
     }
 }
 
+/* Smaller resolution viewports that are below 970 pixels. */
 @media only screen and (max-width: 970px) {
     /* General Pages */
     /* Display mobile menu. */
@@ -314,6 +312,7 @@ tbody tr:nth-child(even) {
     }
     
     /* Contact Page */
+    /* Expands the message field to improve reading. */
     textarea {
         width: 98%;
     }
